[package]
name = "asura"
version = "0.3.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "ASURA implementation in Rust"
repository = "https://github.com/akiradeveloper/ASURA"
readme = "README.md"
categories = ["algorithms"]
keywords = ["distributed", "hash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1"
indexmap = "1.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
consistent_hash = "0.1.4"